--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
   aria-label="Offcanvas navbar large"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'coverPage' %}">Fridge Mananger</a>
+    <a class="navbar-brand" href="{% url 'heroPage' %}">Fridge Mananger</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -35,7 +35,7 @@
             <a
               class="nav-link active"
               aria-current="page"
-              href="{% url 'coverPage' %}"
+              href="{% url 'heroPage' %}"
               >Home</a
             >
           </li>
