--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -2,16 +2,18 @@
 <div class="d-flex align-items-center justify-content-center vh-100">
   <div class="container">
     <main class="form-signin w-50 m-auto">
-      <form>
+      <form method="POST" action="">
+        {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
         <div class="form-floating">
           <input
-            type="email"
+            type="text"
             class="form-control"
             id="floatingInput"
-            placeholder="name@example.com"
+            placeholder="username"
+            name="username"
           />
-          <label for="floatingInput">Email address</label>
+          <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
           <input
@@ -19,6 +21,7 @@
             class="form-control"
             id="floatingPassword"
             placeholder="Password"
+            name="password"
           />
           <label for="floatingPassword">Password</label>
         </div>
@@ -34,6 +37,11 @@
             Remember me
           </label>
         </div>
+
+        {% for message in messages %}
+        <p>{{message}}</p>
+        {% endfor %}
+
         <button class="btn btn-primary w-100 py-2" type="submit">
           Sign in
         </button>
